--- a/src/components/Projects.css
+++ b/src/components/Projects.css
@@ -12,7 +12,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    min-height: 180px;
+    min-width: 0;
     transition: transform 0.15s, box-shadow 0.3s;
 }
 
@@ -70,4 +70,10 @@
 
 .private-link {
     color: #ff6666;
+}
+
+@media(max-width: 600px) {
+    .project-grid {
+        grid-template-columns: repeat(1, 1fr);
+    }
 }
